--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -10,7 +10,7 @@ library(tidyverse)
     ## ── Attaching packages ──────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
-    ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
+    ## ✔ tibble  1.4.2     ✔ dplyr   0.7.8
     ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
     ## ✔ readr   1.1.1     ✔ forcats 0.3.0
 
@@ -246,71 +246,203 @@ head(birthweight_df)
 Propose model
 -------------
 
-Hypothesis: Assume `babysex`, `fincome` and `gaweeks` are three main factors which influence baby's birth weight.
-
-First, we test `babysex`
+We used stepwise regression to find out a suitable model.
 
 ``` r
-birthweight_df %>% 
-  ggplot(aes(babysex, bwt, group = babysex)) +
-  geom_boxplot()
+fitted_model <- lm(bwt ~ ., data = birthweight_df)
+step(fitted_model, direction = 'both')
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-9-1.png)
+    ## Start:  AIC=48723.14
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + pnumsga + ppbmi + ppwt + smoken + wtgain
+    ## 
+    ## 
+    ## Step:  AIC=48723.14
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + pnumsga + ppbmi + ppwt + smoken
+    ## 
+    ## 
+    ## Step:  AIC=48723.14
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + ppbmi + ppwt + smoken
+    ## 
+    ## 
+    ## Step:  AIC=48723.14
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     ppbmi + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - malform   1      1320 321413817 48721
+    ## - ppbmi     1      7571 321420068 48721
+    ## - momage    1     32877 321445374 48722
+    ## - mheight   1     69489 321481986 48722
+    ## - menarche  1    108896 321521392 48723
+    ## - ppwt      1    135650 321548147 48723
+    ## <none>                  321412497 48723
+    ## - mrace     1    180162 321592659 48724
+    ## - fincome   1    204538 321617035 48724
+    ## - parity    1    412356 321824853 48727
+    ## - babysex   1    859882 322272379 48733
+    ## - gaweeks   1   4636561 326049058 48783
+    ## - smoken    1   4906466 326318962 48787
+    ## - frace     4   6993136 328405633 48809
+    ## - delwt     1   8061047 329473544 48829
+    ## - blength   1 102002857 423415353 49918
+    ## - bhead     1 106707816 428120312 49966
+    ## 
+    ## Step:  AIC=48721.15
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     menarche + mheight + momage + mrace + parity + ppbmi + ppwt + 
+    ##     smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - ppbmi     1      7525 321421342 48719
+    ## - momage    1     33166 321446983 48720
+    ## - mheight   1     69315 321483132 48720
+    ## - menarche  1    109185 321523001 48721
+    ## - ppwt      1    135587 321549403 48721
+    ## <none>                  321413817 48721
+    ## - mrace     1    180322 321594138 48722
+    ## - fincome   1    203924 321617741 48722
+    ## + malform   1      1320 321412497 48723
+    ## - parity    1    412160 321825977 48725
+    ## - babysex   1    859070 322272887 48731
+    ## - gaweeks   1   4635430 326049246 48781
+    ## - smoken    1   4905414 326319230 48785
+    ## - frace     4   6994994 328408811 48807
+    ## - delwt     1   8076910 329490727 48827
+    ## - blength   1 102017099 423430916 49916
+    ## - bhead     1 106719594 428133410 49964
+    ## 
+    ## Step:  AIC=48719.26
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     menarche + mheight + momage + mrace + parity + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - momage    1     33768 321455110 48718
+    ## - menarche  1    110834 321532176 48719
+    ## <none>                  321421342 48719
+    ## - mrace     1    181654 321602996 48720
+    ## - fincome   1    205498 321626840 48720
+    ## + ppbmi     1      7525 321413817 48721
+    ## + malform   1      1273 321420068 48721
+    ## - parity    1    410604 321831945 48723
+    ## - babysex   1    857801 322279143 48729
+    ## - mheight   1   1037401 322458743 48731
+    ## - ppwt      1   2910951 324332292 48756
+    ## - gaweeks   1   4632739 326054080 48779
+    ## - smoken    1   4909681 326331023 48783
+    ## - frace     4   6987845 328409187 48805
+    ## - delwt     1   8072572 329493914 48825
+    ## - blength   1 102027636 423448978 49914
+    ## - bhead     1 106866482 428287824 49964
+    ## 
+    ## Step:  AIC=48717.71
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     menarche + mheight + mrace + parity + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - menarche  1     92093 321547203 48717
+    ## <none>                  321455110 48718
+    ## - mrace     1    182821 321637931 48718
+    ## - fincome   1    255183 321710292 48719
+    ## + momage    1     33768 321421342 48719
+    ## + ppbmi     1      8127 321446983 48720
+    ## + malform   1      1558 321453551 48720
+    ## - parity    1    430203 321885313 48722
+    ## - babysex   1    848047 322303157 48727
+    ## - mheight   1   1035517 322490626 48730
+    ## - ppwt      1   2883480 324338589 48754
+    ## - gaweeks   1   4691755 326146864 48779
+    ## - smoken    1   4915164 326370274 48782
+    ## - frace     4   7591202 329046311 48811
+    ## - delwt     1   8042149 329497259 48823
+    ## - blength   1 101995731 423450841 49912
+    ## - bhead     1 106914493 428369603 49962
+    ## 
+    ## Step:  AIC=48716.96
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     mheight + mrace + parity + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## <none>                  321547203 48717
+    ## - mrace     1    180064 321727267 48717
+    ## + menarche  1     92093 321455110 48718
+    ## - fincome   1    259196 321806399 48718
+    ## + momage    1     15027 321532176 48719
+    ## + ppbmi     1      9496 321537707 48719
+    ## + malform   1      1742 321545461 48719
+    ## - parity    1    421852 321969055 48721
+    ## - babysex   1    852888 322400091 48726
+    ## - mheight   1    974834 322522036 48728
+    ## - ppwt      1   2876741 324423943 48754
+    ## - gaweeks   1   4677421 326224624 48778
+    ## - smoken    1   4944978 326492181 48781
+    ## - frace     4   7564700 329111903 48810
+    ## - delwt     1   8178108 329725311 48824
+    ## - blength   1 102190532 423737735 49913
+    ## - bhead     1 106832496 428379698 49961
 
-According to the results, sex has little influence on baby's birh weight. Then, we test `fincome`.
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ babysex + bhead + blength + delwt + fincome + 
+    ##     frace + gaweeks + mheight + mrace + parity + ppwt + smoken, 
+    ##     data = birthweight_df)
+    ## 
+    ## Coefficients:
+    ## (Intercept)      babysex        bhead      blength        delwt  
+    ##  -6106.5802      28.6699     130.8611      74.9660       4.1184  
+    ##     fincome       frace2       frace3       frace4       frace8  
+    ##      0.3273    -113.9975     -17.4099     -42.6294     -27.3182  
+    ##     gaweeks      mheight        mrace       parity         ppwt  
+    ##     11.6108       6.4718     -22.3184      96.2006      -2.6614  
+    ##      smoken  
+    ##     -4.7822
+
+So one of suitable model is `lm(formula = bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + mheight + mrace + parity + ppwt + smoken, data = birthweight_df)`
 
 ``` r
-birthweight_df %>% 
-  ggplot(aes(fincome, bwt)) +
-  geom_point() +
-  geom_smooth()
-```
-
-    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
-
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-10-1.png)
-
-The plot above shows family monthly income influence average birth weight of baby. Finally, we test `gaweeks`.
-
-``` r
-birthweight_df %>% 
-  ggplot(aes(gaweeks, bwt)) +
-  geom_point() +
-  geom_smooth()
-```
-
-    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
-
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-11-1.png)
-
-Gestational age seems to influence baby's birth weight as well. So we create models with three factors. As these three factor have no relationship with each other, we treated them as main effects only.
-
-``` r
-own_model = lm(bwt ~ babysex + fincome + gaweeks, data = birthweight_df) 
+own_model = lm(formula = bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + mheight + mrace + parity + ppwt + smoken, data = birthweight_df) 
 
 broom::tidy(own_model)
 ```
 
-    ## # A tibble: 4 x 5
-    ##   term        estimate std.error statistic   p.value
-    ##   <chr>          <dbl>     <dbl>     <dbl>     <dbl>
-    ## 1 (Intercept)   584.      89.8        6.51 8.64e- 11
-    ## 2 babysex       -94.6     14.0       -6.75 1.62e- 11
-    ## 3 fincome         2.16     0.271      7.97 1.96e- 15
-    ## 4 gaweeks        65.3      2.23      29.3  3.53e-172
+    ## # A tibble: 16 x 5
+    ##    term         estimate std.error statistic   p.value
+    ##    <chr>           <dbl>     <dbl>     <dbl>     <dbl>
+    ##  1 (Intercept) -6107.      140.      -43.5   0.       
+    ##  2 babysex        28.7       8.46      3.39  7.12e-  4
+    ##  3 bhead         131.        3.45     37.9   8.12e-272
+    ##  4 blength        75.0       2.02     37.1   1.42e-261
+    ##  5 delwt           4.12      0.393    10.5   1.95e- 25
+    ##  6 fincome         0.327     0.175     1.87  6.19e-  2
+    ##  7 frace2       -114.       17.0      -6.72  2.01e- 11
+    ##  8 frace3        -17.4      46.9      -0.371 7.11e-  1
+    ##  9 frace4        -42.6      43.0      -0.991 3.22e-  1
+    ## 10 frace8        -27.3      73.4      -0.372 7.10e-  1
+    ## 11 gaweeks        11.6       1.46      7.93  2.71e- 15
+    ## 12 mheight         6.47      1.79      3.62  2.96e-  4
+    ## 13 mrace         -22.3      14.3      -1.56  1.20e-  1
+    ## 14 parity         96.2      40.4       2.38  1.72e-  2
+    ## 15 ppwt           -2.66      0.428    -6.22  5.40e- 10
+    ## 16 smoken         -4.78      0.586    -8.16  4.48e- 16
 
 ``` r
 broom::glance(own_model)
 ```
 
     ## # A tibble: 1 x 11
-    ##   r.squared adj.r.squared sigma statistic   p.value    df  logLik    AIC
-    ## *     <dbl>         <dbl> <dbl>     <dbl>     <dbl> <int>   <dbl>  <dbl>
-    ## 1     0.191         0.190  461.      341. 9.08e-199     4 -32789. 65588.
+    ##   r.squared adj.r.squared sigma statistic p.value    df  logLik    AIC
+    ## *     <dbl>         <dbl> <dbl>     <dbl>   <dbl> <int>   <dbl>  <dbl>
+    ## 1     0.718         0.717  273.      733.       0    16 -30504. 61041.
     ## # ... with 3 more variables: BIC <dbl>, deviance <dbl>, df.residual <int>
 
-Now, we show the plot of model residuals against fitted values.
+According to the p-value and r-square, we can conclude that this model is effective. Now, we show the plot of model residuals against fitted values.
 
 ``` r
 birthweight_df %>% 
@@ -320,7 +452,7 @@ birthweight_df %>%
   geom_hex()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-13-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-11-1.png)
 
 Cross validation
 ----------------
@@ -335,7 +467,7 @@ cv_df =
 ``` r
 cv_df = 
   cv_df %>% 
-  mutate(own_mod = map(train, ~lm(bwt ~ babysex + fincome + gaweeks, data = .x)),
+  mutate(own_mod = map(train, ~lm(bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + mheight + mrace + parity + ppwt + smoken, data = .x)),
          compared_mod1 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
          compared_mod2 = map(train, ~lm(bwt ~ bhead + blength + babysex + bhead*blength + blength*babysex + babysex*bhead + bhead*blength*babysex, data = .x))) %>% 
   mutate(rmse_own = map2_dbl(own_mod, test, ~rmse(model = .x, data = .y)),
@@ -354,4 +486,4 @@ cv_df %>%
   ggplot(aes(x = model, y = rmse)) + geom_violin()
 ```
 
-![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-16-1.png)
+![](p8105_hw6_xl2836_files/figure-markdown_github/unnamed-chunk-14-1.png)
