--- a/p8105_hw6_xl2836.md
+++ b/p8105_hw6_xl2836.md
@@ -9,9 +9,9 @@ library(tidyverse)
 
     ## ── Attaching packages ──────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
 
-    ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
+    ## ✔ ggplot2 3.1.0     ✔ purrr   0.2.5
     ## ✔ tibble  1.4.2     ✔ dplyr   0.7.8
-    ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
+    ## ✔ tidyr   0.8.2     ✔ stringr 1.3.1
     ## ✔ readr   1.1.1     ✔ forcats 0.3.0
 
     ## ── Conflicts ─────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
@@ -35,7 +35,6 @@ homicide_df = read_csv("./data/homicide-data.csv") %>%
          victim_age = as.numeric(victim_age),
          victim_race = ifelse(victim_race == "White", "white", "non-white"),
          victim_race = relevel(as.factor(victim_race), ref = "white")) %>% 
-  #filter(city_state != "Dallas, TX")
   filter(city_state != "Dallas, TX" & city_state != "Phoenix, AZ" & city_state != "Kansas City, MO" & city_state != "Tulsa, AL")
 ```
 
@@ -74,6 +73,10 @@ glm_Baltimore =
 ``` r
 glm_estimate =
   glm_Baltimore %>% 
+  broom::tidy()
+
+glm_estimate =
+  glm_Baltimore %>% 
   broom::tidy() %>% 
   mutate(OR = exp(estimate)) %>%
   select(term, log_OR = estimate, OR, p.value) 
@@ -109,7 +112,6 @@ Each city
 get_CI = function(model){
   confint(model) %>% 
     exp() %>% 
-  #exp(confint(glm_Baltimore)) %>% 
     broom::tidy() %>% 
     rename(term = .rownames, conf_low = X2.5.., conf_high = X97.5..) %>% 
     as.tibble()
@@ -133,25 +135,6 @@ glm_Albuquerque =
   filter(city_state == "Albuquerque, NM") %>% 
   glm(bin_diposition ~ victim_age + victim_sex + victim_race, data = .,family = binomial()) 
 
-glm_Albuquerque
-```
-
-    ## 
-    ## Call:  glm(formula = bin_diposition ~ victim_age + victim_sex + victim_race, 
-    ##     family = binomial(), data = .)
-    ## 
-    ## Coefficients:
-    ##          (Intercept)            victim_age        victim_sexMale  
-    ##              1.23193              -0.02302               0.45470  
-    ##    victim_sexUnknown  victim_racenon-white  
-    ##              2.10323              -0.29912  
-    ## 
-    ## Degrees of Freedom: 322 Total (i.e. Null);  318 Residual
-    ##   (55 observations deleted due to missingness)
-    ## Null Deviance:       411.6 
-    ## Residual Deviance: 387.3     AIC: 397.3
-
-``` r
 get_CI(glm_Albuquerque)
 ```
 
@@ -246,7 +229,7 @@ head(birthweight_df)
 Propose model
 -------------
 
-We used stepwise regression to find out a suitable model.
+We used stepwise regression to find out a suitable model. Stepwise regression helps us to add and remove different factors and compares adjusted r-square to decide an effective model.
 
 ``` r
 fitted_model <- lm(bwt ~ ., data = birthweight_df)
